@@ -9,7 +9,6 @@ import frc.generated.BuildConstants;
 import frc.robot.constants.Constants;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.littletonrobotics.junction.Logger;
 
 /** Utilities used by the AdvantageKit Logger. */
@@ -22,26 +21,32 @@ public class LoggerUtil {
    */
   public static void initializeLoggerMetadata(Logger logger) {
     // Record metadata from generated state file.
-    logger.recordMetadata("Robot", Constants.getRobotType().name());
-    logger.recordMetadata("RuntimeEnvironment", RobotBase.getRuntimeType().name());
-    logger.recordMetadata("ProjectName", BuildConstants.MAVEN_NAME);
-    logger.recordMetadata("BuildDate", BuildConstants.BUILD_DATE);
-    logger.recordMetadata("GitSHA", BuildConstants.GIT_SHA);
-    logger.recordMetadata("GitDate", BuildConstants.GIT_DATE);
-    logger.recordMetadata("GitBranch", BuildConstants.GIT_BRANCH);
+    logger.recordMetadata("ROBOT_NAME", Constants.getRobotType().toString());
+    logger.recordMetadata("RUNTIME_ENVIRONMENT", RobotBase.getRuntimeType().toString());
+    logger.recordMetadata("PROJECT_NAME", BuildConstants.MAVEN_NAME);
+    logger.recordMetadata("BUILD_DATE", BuildConstants.BUILD_DATE);
+    logger.recordMetadata("GIT_SHA", BuildConstants.GIT_SHA);
+    logger.recordMetadata("GIT_DATE", BuildConstants.GIT_DATE);
+    logger.recordMetadata("GIT_BRANCH", BuildConstants.GIT_BRANCH);
 
     // Set the current GIT state of the robot (helps manage the logs that are saved).
     switch (BuildConstants.DIRTY) {
-      case 0 -> logger.recordMetadata("GitDirty", "All changes committed");
-      case 1 -> logger.recordMetadata("GitDirty", "Uncommitted changes");
-      default -> logger.recordMetadata("GitDirty", "Unknown");
+      case 0 -> logger.recordMetadata("GIT_STATUS", "All changes committed");
+      case 1 -> logger.recordMetadata("GIT_STATUS", "Uncommitted changes");
+      default -> logger.recordMetadata("GIT_STATUS", "Unknown");
     }
   }
 
+  /**
+   * Get the path of the USB drive if it is plugged into the roboRIO. If one isn't found, it will
+   * return null.
+   *
+   * @return path of the USB drive.
+   */
   public static String getUSBPath() {
     // Return the path of the USB drive it is plugged in, else, return null.
     try {
-      Path drivePath = Paths.get("/u").toRealPath();
+      Path drivePath = Path.of("/u").toRealPath();
       return drivePath.toString();
     } catch (IOException e) {
       return null;
